--- a/ProjectE2/pom.xml
+++ b/ProjectE2/pom.xml
@@ -45,7 +45,20 @@
     <version>2.11.0</version>
     <type>pom</type>
 </dependency>
-    
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>4.1.4.Final</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.11</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>ProjectE2</finalName>
